# 00.self_study_c

./: CMakeLists.txt  README.md
mongoose/: mongoose.c  mongoose.h
src/: mine_sweep.c  sdl_0.c  sdl_1.c  sdl_2.c  sdl_3.c  sdl_4.c  sdl_5.c  web_0.c
